[workspace]
members = ["kafkaesque", "kafkaesque-macros"]

[workspace.dependencies]
darling = "0.14.2"
derive_builder = "0.12.0"
derive_more = "0.99.17"
futures = "0.3"
integer-encoding = { version = "3.0.4" }
itertools = "0.10.5"
namewise = "2.6.2"
proc-macro2 = "1"
quote = "1.0.23"
syn = "1.0.107"
thiserror = "1.0.35"
tokio = { version = "1.21.1" }
tokio-util = { version = "0.7.4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
uuid = "1.1.2"
