[workspace]
members = ["kafkaesque", "kafkaesque-macros"]

[workspace.dependencies]
darling = "0.14.2"
derive_builder = "0.12.0"
derive_more = "0.99.17"
fastrand = "1.8.0"
futures = "0.3.26"
integer-encoding = "3.0.4"
itertools = "0.10.5"
kafkaesque-macros = { path = "kafkaesque-macros", version = "0.0.15" }
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "2.0.11"
thiserror = "1.0.35"
tokio = "1.21.1"
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.1.2"
