[package]
name = "kafkaesque-macros"
description = "Unofficial Kafka implementations in Rust"
repository = "https://github.com/amrhassan/kafkaesque"
version = "0.0.7"
edition = "2021"
license = "MIT"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
