[package]
name = "kafkaesque"
description = "Unofficial Kafka implementations in Rust"
repository = "https://github.com/amrhassan/kafkaesque"
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dependencies]
derive_builder = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
integer-encoding = { workspace = true, features = ["tokio_async"] }
itertools = { workspace = true }
kafkaesque-macros = { workspace = true }
namewise = { worksapce = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"]  }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
uuid = { workspace = true }
